--- a/apps/templates/home/contacto.html
+++ b/apps/templates/home/contacto.html
@@ -1,24 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Contacto</title>
-</head>
-<body>
-    <h1>Hola soy la pagina de contacto</h1>
-    {% if info_enviado %}
-        {{ email }}
-        {{ subject }}
-        {{ text }}
-    {% else %}
-        <form action="" method="POST">
-            {% csrf_token %}
-            {{formulario.as_p}}
-            <input type="submit" name='Enviar'>
-        </form>
-    {% endif %}
-    
-</body>
-</html>
+{% extends "home/base.html" %}
+{% block contenido %}
+{% block title%}<title>Contacto</title>{% endblock %}
+
+<h1>Hola soy la pagina de contacto</h1>
+{% if info_enviado %}
+    {{ email }}
+    {{ subject }}
+    {{ text }}
+{% else %}
+    <form action="" method="POST">
+        {% csrf_token %}
+        {{formulario.as_p}}
+        <input class= "btn" type="submit" name='Enviar'>
+    </form>
+{% endif %}
+{% endblock %}
