--- a/apps/templates/home/nosotros.html
+++ b/apps/templates/home/nosotros.html
@@ -1,12 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>La pagina nosotros</title>
-</head>
-<body>
-    <h1>Hola Django</h1>
-</body>
-</html>
+{% extends "home/base.html" %}
+{% block contenido %}
+{% block title%}<title>Contacto</title>{% endblock %}
+    <h1>Hola Somos PlaceSoft</h1>
+{% endblock %}
