--- a/apps/templates/coopropiedad/coopropiedad_list.html
+++ b/apps/templates/coopropiedad/coopropiedad_list.html
@@ -1,3 +1,7 @@
+{% extends "coopropiedad/base.html" %}
+{% block title%}<title>Coopropiedades|Listado</title>{% endblock %}
+{% block contenido %}
+<div class="container">
 <h2>Coopropiedades</h2>
 <ul>
     {% for object in object_list %}
@@ -6,3 +10,9 @@
         <h3>Aun no tienes Coopropiedades</h3>
     {% endfor %}
 </ul>
+<a href="{% url 'crear' %}">
+    <input type="submit" class="btn" value="Crear Coopropiedad">
+</a>
+</div>
+
+{% endblock %}
