--- a/apps/templates/home/dashboard.html
+++ b/apps/templates/home/dashboard.html
@@ -1,47 +1,30 @@
-<!DOCTYPE html>
+{% extends "home/base.html" %}
+
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge"> -->
     <!--Import Google Icon Font-->
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> -->
    <!-- Compiled and minified CSS -->
-   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/css/materialize.min.css">
+   <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/css/materialize.min.css">
    
     <title>Dashboard | {{ titulo }}</title>
 </head>
-<body>
+<body> -->
     <!-- NavBar -->
-    <nav>
-        <div class="nav-wrapper cyan">
-            <a href="#!" class="brand-logo">PlaceSoft</a> 
-            <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
-            <ul class="right hide-on-med-and-down">
-            <li><a href="sass.html">Inicio</a></li>
-            <li><a href="badges.html">Components</a></li>
-            <li><a href="collapsible.html">Javascript</a></li>
-            <li><a href="mobile.html">Mobile</a></li>
-            <li><a class="waves-effect waves-light btn red">{{ titulo }}</a></li>
-            </ul>
-        </div>
-        </nav>
     
-        <ul class="sidenav" id="mobile-demo">
-        <li><a href="sass.html">Inicio</a></li>
-        <li><a href="badges.html">Components</a></li>
-        <li><a href="collapsible.html">Javascript</a></li>
-        <li><a href="mobile.html">Mobile</a></li>
-        <li><a class="waves-effect waves-light btn">Registrate</a></li>
-        </ul>
     
     <!-- servicios -->
+    {% block contenido %}
     <div class="container">
         <div class="section">
     
         <div class="row">
         <div class="col s12 m4">   
-            <a class="waves-effect waves-light" href="">
+            <a class="waves-effect waves-light" href="{% url 'lista' %}">
                 <i class="medium material-icons red-text">business</i>
                 <h4 class="red-text">Coopropiedades</h4>
             </a>
@@ -138,10 +121,10 @@
           <li><a class="btn-floating blue"><i class="material-icons">attach_file</i></a></li>
         </ul>
       </div>
-
+{% endblock %}
   <!--  Scripts-->
-  <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"></script>
+  <!-- <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"></script> -->
   <script>
     $(document).ready(function(){
         $('.fixed-action-btn').floatingActionButton();
@@ -150,5 +133,6 @@
         $('.sidenav').sidenav();
     });
   </script>
-</body>
-</html>
+  
+<!-- </body>
+</html> -->
