--- a/apps/templates/home/index.html
+++ b/apps/templates/home/index.html
@@ -23,9 +23,9 @@
               <li class="nav-item"><a class="nav-link active" href="#about">Nosotros</a></li>
               <li class="nav-item"><a class="nav-link" href="#projects">Clientes</a></li>
               <li class="nav-item"><a class="nav-link" href="#pricing">Precios</a></li>
-              <li class="nav-item"><a class="nav-link" href="#team">Equipo</a></li>
+              <!-- <li class="nav-item"><a class="nav-link" href="#team">Equipo</a></li> -->
               <li class="nav-item"><a class="nav-link" href="#contact">Contacto</a></li>
-            </ul><a class="btn btn-primary btn-rounded my-0" href="https://templateflip.com/templates/material-landing" target="_blank">Registrate</a>
+            </ul><a class="btn btn-primary btn-rounded my-0" href="{% url 'login' %}" target="_blank">Ingresa</a>
           </div>
         </div>
       </nav>
@@ -40,11 +40,12 @@
                     <h1 class="h1-responsive font-bold mt-sm-5">Mejorar la Comunicacion es Nuestra Mision.</h1>
                     <div class="h6">
                       Cuando un administrador tiene a su cargo mas de un conjunto residencial, la comunicacion con 
-                      las personas que habitan estos lugares se convierte en un reto diario. PlaceSoft tiene para ti
-                      una gran ayuda que te ayudara a mejorar todas esas tareas diarias que tienes que atender dia a dia.
+                      las personas que habitan estos lugares se convierte en un reto diario. PlaceSoft ofrece a los 
+                      administradores y habitantes una plataforma que centraliza la informacion que muchas veces pasas por 
+                      alto en un Conjunto Cerrado.
                     </div>
                   </div><br>
-                  <div class="wow fadeInLeft" data-wow-delay="0.3s"><a class="btn btn-white dark-grey-text font-bold ml-0" href="https://www.youtube.com/watch?v=60ItHLz5WEA" target="_blank"><i class="fa fa-play mr-1"></i>Que es PlaceSoft</a><a class="btn btn-outline-white" href="#">Leer Mas</a></div>
+                  <div class="wow fadeInLeft" data-wow-delay="0.3s"><a class="btn btn-white dark-grey-text font-bold ml-0" href="https://www.youtube.com/watch?v=60ItHLz5WEA" target="_blank"><i class="fa fa-play mr-1"></i>Que es PlaceSoft</a><a class="btn btn-outline-white" href="#">Beneficios</a></div>
                 </div>
               </div>
             </div>
@@ -56,20 +57,20 @@
 <section class="row no-gutters" id="features">
   <div class="col-lg-4 col-md-12 col-sm-12 purple lighten-1 text-white">
     <div class="p-5 text-center wow zoomIn" data-wow-delay=".1s"><i class="fa fa-line-chart fa-2x"></i>
-      <div class="h5 mt-3">Mejora tu Productividad</div>
-      <p class="mt-5">Leverage agile frameworks to provide a robust synopsis for high level overviews.</p>
+      <div class="h5 mt-3">Evidencia tu Gestion</div>
+      <p class="mt-5">Permite que la junta, consejo y habitantes vean toda la gestion que haces en tu conjunto cerrado.</p>
     </div>
   </div>
   <div class="col-lg-4 col-md-12 light-blue lighten-1 text-white">
     <div class="p-5 text-center wow zoomIn" data-wow-delay=".3s"><i class="fa fa-home fa-2x"></i>
       <div class="h5 mt-3">Centraliza la Informacion</div>
-      <p class="mt-5">Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition</p>
+      <p class="mt-5">Ten a la mano la informacion de los conjuntos cerrados que administras.</p>
     </div>
   </div>
   <div class="col-lg-4 col-md-12 teal lighten-1 text-white">
-    <div class="p-5 text-center wow zoomIn" data-wow-delay=".5s"><i class="fa fa-users fa-2x"></i>
-      <div class="h5 mt-3">Comunicate mas Facil</div>
-      <p class="mt-5">Organically grow the holistic world view of disruptive innovation via workplace diversity and empowerment.</p>
+    <div class="p-5 text-center wow zoomIn" data-wow-delay=".5s"><i class="fa fa-calendar fa-2x"></i>
+      <div class="h5 mt-3">Optimiza tu trabajo</div>
+      <p class="mt-5">Sera mas facil para el administrador saber que peticiones tienen mayor prioridad, que reuniones tienes programadas y tareas por hacer.</p>
     </div>
   </div>
   <!-- <div class="col-lg-3 col-md-6 light-blue lighten-1 text-white">
@@ -82,32 +83,30 @@
 <section class="text-center py-5 grey lighten-4" id="about">
   <div class="container">
     <div class="wow fadeIn">
-      <h2 class="h1 pt-5 pb-3">Por que usar PlaceSoft?</h2>
+      <h2 class="h1 pt-5 pb-3">Somos</h2>
       <p class="px-5 mb-5 pb-3 lead blue-grey-text">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-        aliqua. Ut enim ad minim veniam.
+      Un equipo de desarrollo que implementa soluciones tecnologica de acuerdo a las necesidades que tienen los administradores y 
+      habitantes de conjuntos cerrados.
       </p>
     </div>
     <div class="row">
       <div class="col-md-4 mb-r wow fadeInUp" data-wow-delay=".3s"><i class="fa fa-dashboard fa-3x orange-text"></i>
-        <h3 class="h4 mt-3">Administracion</h3>
+        <h3 class="h4 mt-3">Gestion</h3>
         <p class="mt-3 blue-grey-text">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit maiores nam, aperiam minima assumenda deleniti
-          hic.
+        Encuentra en PlaceSoft los modulos necesarios para gestionar el dia a dia de tus conjuntos cerrados.
         </p>
       </div>
       <div class="col-md-4 mb-r wow fadeInUp" data-wow-delay=".4s"><i class="fa fa-comments-o fa-3x cyan-text"></i>
         <h3 class="h4 mt-3">Comunicacion</h3>
         <p class="mt-3 blue-grey-text">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit maiores nam, aperiam minima assumenda deleniti
-          hic.
+        Trabajamos constantemente para mejorar la experiencia de usuario para que los habitantes se sientan a gusto con 
+        la gestion que se lleva a cabo en su lugar de residencia.
         </p>
       </div>
       <div class="col-md-4 mb-r wow fadeInUp" data-wow-delay=".5s"><i class="fa fa-cubes fa-3x red-text"></i>
         <h3 class="h4 mt-3">Integracion</h3>
         <p class="mt-3 blue-grey-text">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit maiores nam, aperiam minima assumenda deleniti
-          hic.
+        Si tienes uno o mas conjuntos cerrados que administrar integra mas facil tus datos.
         </p>
       </div>
     </div>
@@ -116,48 +115,45 @@
 <section class="py-5" id="projects">
   <div class="container">
     <div class="wow fadeIn">
-      <h2 class="text-center h1 my-4">Nuestros Usuarios</h2>
+      <h2 class="text-center h1 my-4">Nuestros Clientes</h2>
       <p class="px-5 mb-5 pb-3 lead blue-grey-text text-center">
-        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-        cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      Son cada dia mas los administradores de Conjuntos Cerrados que optan por utilizar nuestra aplicacion.
       </p>
     </div>
     <div class="row wow fadeInLeft" data-wow-delay=".3s">
-      <div class="col-lg-6 col-xl-5 pr-lg-5 pb-5"><img class="img-fluid rounded z-depth-2" src="{% static 'img/kuala-lumpur.jpg' %}" alt="project image"/></div>
+      <div class="col-lg-6 col-xl-5 pr-lg-5 pb-5"><img class="img-fluid rounded z-depth-2" src="http://www.inmobiliariayabogadoslavilla.com/wp-content/uploads/2016/12/conjunto-cerrado.jpg" alt="project image"/></div>
       <div class="col-lg-6 col-xl-7 pl-lg-5 pb-4">
         <div class="row mb-3">
-          <div class="col-1 mr-1"><i class="fa fa-book fa-2x cyan-text"></i></div>
+          <div class="col-1 mr-1"><i class="fa fa-map fa-2x cyan-text"></i></div>
           <div class="col-10">
-            <h5 class="font-bold">Education</h5>
+            <h5 class="font-bold">Otras Ciudades</h5>
             <p class="grey-text">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit maiores nam, aperiam minima assumenda
-              voluptate velit.
+              PlaceSoft es utilizada por muchos administradores en diferentes ciudades del pais especificamente en
+              Bogota, Medellin, Barranquilla, Cali, Popayan y Pasto.
             </p>
           </div>
         </div>
         <div class="row mb-3">
-          <div class="col-1 mr-1"><i class="fa fa-code fa-2x red-text"></i></div>
+          <div class="col-1 mr-1"><i class="fa fa-building fa-2x red-text"></i></div>
           <div class="col-10">
-            <h5 class="font-bold">Technology</h5>
+            <h5 class="font-bold">Contructoras</h5>
             <p class="grey-text">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit maiores nam, aperiam minima assumenda
-              voluptate velit.
+            Logramos hacer alianzas con reconocidas contructoras como Constructora Melendez, Garzon Holguin y Amarillo.
             </p>
           </div>
         </div>
         <div class="row">
-          <div class="col-1 mr-1"><i class="fa fa-money fa-2x deep-purple-text"></i></div>
+          <div class="col-1 mr-1"><i class="fa fa-home fa-2x orange-text"></i></div>
           <div class="col-10">
-            <h5 class="font-bold">Finance</h5>
+            <h5 class="font-bold">Inmobiliarias</h5>
             <p class="grey-text">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit maiores nam, aperiam minima assumenda
-              voluptate velit.
+            Las inmobiliarias tambien recomiendan a los administradores adquirir PlaceSoft.
             </p>
           </div>
         </div>
       </div>
     </div>
-    <hr/>
+    <!-- <hr/>
     <div class="row pt-5 wow fadeInRight" data-wow-delay=".3s">
       <div class="col-lg-6 col-xl-7 mb-3">
         <div class="row mb-3">
@@ -193,15 +189,14 @@
       </div>
       <div class="col-lg-6 col-xl-5 mb-3"><img class="img-fluid rounded z-depth-2" src="{% static 'img/san-francisco.jpg' %}" alt="project image"/></div>
     </div>
-  </div>
+  </div> -->
 </section>
 <section class="text-center py-5 indigo darken-1 text-white" id="pricing">
   <div class="container">
     <div class="wow fadeIn">
-      <h2 class="h1 pt-5 pb-3">Our pricing plans</h2>
+      <h2 class="h1 pt-5 pb-3">Precios y Planes</h2>
       <p class="px-5 mb-5 pb-3 lead">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit, error amet numquam iure provident voluptate esse quasi,
-        veritatis totam voluptas nostrum quisquam eum porro a pariatur accusamus veniam.
+        Lo importante no es cuánto cuesta sino cuánto ahorras.
       </p>
     </div>
     <div class="row wow zoomIn">
@@ -209,22 +204,25 @@
         <div class="card card-image">
           <div class="text-white text-center pricing-card d-flex align-items-center rgba-stylish-strong py-3 px-3 rounded">
             <div class="card-body">
-              <div class="h5">Individual</div>
-              <div class="py-5"><sup class="display-4">$</sup><span class="display-1">9</span><span class="display-4">/m</span></div>
+              <div class="h5">Basico</div>
+              <div class="py-5"><sup class="display-4">$</sup><span class="display-3">50.000</span></div>
               <ul class="list-unstyled">
                 <li>
-                  <p><strong>1</strong> person</p>
+                  <p><strong>Pago Mensual</strong></p>
                 </li>
                 <li>
-                  <p><strong>10</strong> projects</p>
+                  <p><strong>1</strong> Admistrador</p>
                 </li>
                 <li>
-                  <p><strong>100</strong> features</p>
+                  <p><strong>20</strong> Hogares</p>
                 </li>
                 <li>
-                  <p><strong>20GB</strong> storage</p>
+                  <p><strong>1</strong> Sesion por Residente</p>
                 </li>
-              </ul><a class="btn btn-outline-white mt-5"> Buy now</a>
+                <li>
+                  <p><strong>30</strong> Dias de Prueba</p>
+                </li>
+              </ul><a class="btn btn-outline-white mt-5"> Compra Ahora</a>
             </div>
           </div>
         </div>
@@ -233,22 +231,25 @@
         <div class="card card-image">
           <div class="text-white text-center pricing-card d-flex align-items-center rgba-teal-strong py-3 px-3 rounded">
             <div class="card-body">
-              <div class="h5">Startup</div>
-              <div class="py-5"><sup class="display-4">$</sup><span class="display-1">29</span><span class="display-4">/m</span></div>
+              <div class="h5">Estandar</div>
+              <div class="py-5"><sup class="display-4">$</sup><span class="display-3">80.000</span></div>
               <ul class="list-unstyled">
-                <li>
-                  <p><strong>10</strong> person</p>
+               <li>
+                  <p><strong>Pago Mensual</strong></p>
                 </li>
                 <li>
-                  <p><strong>100</strong> projects</p>
+                  <p><strong>5</strong> Administradores</p>
                 </li>
                 <li>
-                  <p><strong>200</strong> features</p>
+                  <p><strong>60</strong> Hogares</p>
                 </li>
                 <li>
-                  <p><strong>100GB</strong> storage</p>
+                  <p><strong>Ilimitadas</strong> Sesiones por Residentes</p>
                 </li>
-              </ul><a class="btn btn-outline-white mt-5"> Buy now</a>
+                <li>
+                  <p><strong>30</strong> Dias de Prueba</p>
+                </li>
+              </ul><a class="btn btn-outline-white mt-5"> Compra Ahora</a>
             </div>
           </div>
         </div>
@@ -257,22 +258,25 @@
         <div class="card card-image">
           <div class="text-white text-center pricing-card d-flex align-items-center rgba-red-strong py-3 px-3 rounded">
             <div class="card-body">
-              <div class="h5">Enterprise</div>
-              <div class="py-5"><sup class="display-4">$</sup><span class="display-1">99</span><span class="display-4">/m</span></div>
+              <div class="h5">Premium</div>
+              <div class="py-5"><sup class="display-4">$</sup><span class="display-3">150.000</span></div>
               <ul class="list-unstyled">
                 <li>
-                  <p><strong>10+</strong> person</p>
+                  <p><strong>Pago Mensual</strong></p>
                 </li>
                 <li>
-                  <p><strong>Unlimited</strong> projects</p>
+                  <p><strong>Ilimitado</strong> Administradores</p>
                 </li>
                 <li>
-                  <p><strong>Unlimited</strong> features</p>
+                  <p><strong>120</strong> Hogares</p>
+                </li>
+                 <li>
+                  <p><strong>Ilimitadas</strong> Sesiones por Residentes</p>
                 </li>
                 <li>
-                  <p><strong>1TB</strong> storage</p>
+                  <p><strong>30</strong> Dias de Prueba</p>
                 </li>
-              </ul><a class="btn btn-outline-white mt-5"> Buy now</a>
+              </ul><a class="btn btn-outline-white mt-5"> Compra Ahora</a>
             </div>
           </div>
         </div>
@@ -280,7 +284,7 @@
     </div>
   </div>
 </section>
-<section class="py-5" id="team">
+{% comment %} <section class="py-5" id="team">
   <div class="container">
     <div class="wow fadeIn">
       <h2 class="h1 pt-5 pb-3 text-center">Our team members</h2>
@@ -326,15 +330,14 @@
       </div>
     </div>
   </div>
-</section>
-<section id="contact" style="background-image:url('img/panorama-3094696_1920.jpg');">
+</section> {% endcomment %}
+<section id="contact" style="background-image:url({% static 'img/panorama-3094696_1920.jpg' %});">
   <div class="rgba-black-strong py-5">
     <div class="container">
       <div class="wow fadeIn">
-        <h2 class="h1 text-white pt-5 pb-3 text-center">Contact us</h2>
+        <h2 class="h1 text-white pt-5 pb-3 text-center">Contactenos</h2>
         <p class="text-white px-5 mb-5 pb-3 lead text-center">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit, error amet numquam iure provident voluptate
-          esse quasi, veritatis totam voluptas nostrum quisquam eum porro a pariatur accusamus veniam.
+          Gracias por contactar PlaceSoft diligencia el siguiente formulario, a la brevedad recibira noticias de nosotros.
         </p>
       </div>
       <div class="card mb-5 wow fadeInUp" data-wow-delay=".4s">
@@ -346,13 +349,13 @@
                   <div class="col-md-6">
                     <div class="md-form">
                       <input class="form-control" id="name" type="text" name="name" required="required"/>
-                      <label for="name">Your name</label>
+                      <label for="name">Tu Nombre</label>
                     </div>
                   </div>
                   <div class="col-md-6">
                     <div class="md-form">
                       <input class="form-control" id="email" type="text" name="_replyto" required="required"/>
-                      <label for="email">Your email</label>
+                      <label for="email">Tu email</label>
                     </div>
                   </div>
                 </div>
@@ -360,31 +363,31 @@
                   <div class="col-md-12">
                     <div class="md-form">
                       <input class="form-control" id="subject" type="text" name="subject" required="required"/>
-                      <label for="subject">Subject</label>
+                      <label for="subject">Asunto</label>
                     </div>
                   </div>
                   <div class="col-md-12">
                     <div class="md-form">
                       <textarea class="md-textarea" id="message" name="message" required="required"></textarea>
-                      <label for="message">Your message</label>
+                      <label for="message">Tu mensaje</label>
                     </div>
                   </div>
                 </div>
                 <div class="center-on-small-only mb-4">
-                  <button class="btn btn-indigo ml-0" type="submit"><i class="fa fa-paper-plane-o mr-2"></i> Send</button>
+                  <button class="btn btn-indigo ml-0" type="submit"><i class="fa fa-paper-plane-o mr-2"></i> Enviar</button>
                 </div>
               </form>
             </div>
             <div class="col-md-4">
               <ul class="list-unstyled text-center">
                 <li class="mt-4"><i class="fa fa-map-marker indigo-text fa-2x"></i>
-                  <p class="mt-2">140, City Center, New York, U.S.A</p>
+                  <p class="mt-2">Calle 2 # 2 - 49 Popayan-Cauca</p>
                 </li>
                 <li class="mt-4"><i class="fa fa-phone indigo-text fa-2x"></i>
-                  <p class="mt-2">+ 01 234 567 89</p>
+                  <p class="mt-2">+ 57 312 6983869</p>
                 </li>
                 <li class="mt-4"><i class="fa fa-envelope indigo-text fa-2x"></i>
-                  <p class="mt-2">contact@company.com</p>
+                  <p class="mt-2">contacto@placesoft.co</p>
                 </li>
               </ul>
             </div>
