--- a/apps/templates/home/dashboard.html
+++ b/apps/templates/home/dashboard.html
@@ -52,7 +52,7 @@
                 <p>Comunicate mas facil con tu administrador y deja evidencia de tus Preguntas Quejas y Rrespuestas</p>
             </div>
         </div>
-
+    </div>
     <div class="row">
         <div class="col s12 m4">
             <a class="waves-effect waves-light" href="">
