--- a/apps/templates/copropiedad/copropiedad_form.html
+++ b/apps/templates/copropiedad/copropiedad_form.html
@@ -5,9 +5,9 @@
     {% if error %}
         {{ error }}
     {% endif %}
-<form action="" method="POST">
+<form method="POST" enctype="multipart/form-data" >
     {% csrf_token %}
-    {{form.as_p}}
+    {{ form.as_table }}
     <input class="btn" type="submit" value='Crear'>
 </form>
 </div>
