--- a/apps/templates/navbar.html
+++ b/apps/templates/navbar.html
@@ -7,14 +7,12 @@
             <li>
                 <a href="">Inicio</a>
             </li> 
-            <li>  
+            <li class="collection-item avatar">  
                 <a href="" class="brand-logo">
-                    <img src="{% static 'img/default-profile.png' %}" height="35" class="d-inline-block align-top rounded-circle"/>
+                    <img src="{% static 'img/default-profile.png' %}" height="35" class="circle"/>
                 </a>
             </li>
-            <li>
-                -------
-            </li>
+            
             {% if user.is_authenticated %}
             <li>
                 <a href="{% url 'logout' %}"><i class="fas fa-sign-out-alt"></i> Salir</a>
