--- a/apps/templates/base.html
+++ b/apps/templates/base.html
@@ -12,6 +12,8 @@
      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
      <!-- Compiled and minified CSS -->
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/css/materialize.min.css">
+     <!-- Style del nav -->
+     <link rel="stylesheet" href="{% static 'css/styleNav.css' %}">
     {% block title %}
     {% endblock %}
 </head>
@@ -28,10 +30,21 @@
 <script>
     $(document).ready(function(){
         $('.sidenav').sidenav();
+        $('.dropdown-trigger').dropdown({
+            inDuration: 300,
+            outDuration: 225,
+            hover: true, // Activate on hover
+            belowOrigin: true, // Displays dropdown below the button
+            alignment: 'right' // Displays dropdown with edge aligned to the left of button
+        });
+        $('select').formSelect();
+        $('.datepicker').datepicker({
+            format: 'yyyy-mm-dd'
+        });
     });
 </script>
 {% block scripts %}
-
+    
 {% endblock %}
 </body>
 </html>
