--- a/apps/templates/copropiedad/copropiedad_form.html
+++ b/apps/templates/copropiedad/copropiedad_form.html
@@ -7,8 +7,16 @@
     {% endif %}
 <form method="POST" enctype="multipart/form-data" >
     {% csrf_token %}
+    <br>
     {{ form.as_table }}
-    <input class="btn" type="submit" value='Crear'>
+
+    <div class="row" aligt="center">
+        <div class="col s12 m6 offset-m5">
+        <button class="btn waves-effect waves-light" type="submit" name="action">Crear
+            <i class="material-icons right">send</i>
+        </button>
+        </div>
+    </div>
 </form>
 </div>
 {% endblock %}
