--- a/apps/templates/inmueble/inmueble_update.html
+++ b/apps/templates/inmueble/inmueble_update.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title%}<title>Copropiedades|Editar</title>{% endblock %}
+{% block title%}<title>Inmueble | Editar</title>{% endblock %}
 {% block contenido %}
 <div class="container">
 <form action="" method="post">{% csrf_token %}
@@ -14,4 +14,5 @@
     </div>
 </form>
 <br>
+{{object.pk}}
 {% endblock %}
