--- a/apps/templates/usuarios/login.html
+++ b/apps/templates/usuarios/login.html
@@ -1,103 +1,72 @@
+{% load static %}
+<!DOCTYPE html>
 <html>
-
 <head>
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title>Login</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+  <!-- <script src="main.js"></script> -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/css/materialize.min.css">
-  
-  <style>
-    body {
-      display: flex;
-      min-height: 100vh;
-      flex-direction: column;
-    }
-
-    main {
-      flex: 1 0 auto;
-    }
-
-    body {
-      background: #fff;
-    }
-
-    .input-field input[type=date]:focus + label,
-    .input-field input[type=text]:focus + label,
-    .input-field input[type=email]:focus + label,
-    .input-field input[type=password]:focus + label {
-      color: #e91e63;
-    }
-
-    .input-field input[type=date]:focus,
-    .input-field input[type=text]:focus,
-    .input-field input[type=email]:focus,
-    .input-field input[type=password]:focus {
-      border-bottom: 2px solid #e91e63;
-      box-shadow: none;
-    }
-  </style>
+  <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet" type="text/css">
+    <link href="{% static 'css/mdb.min.css' %}" rel="stylesheet">
+    <link href="{% static 'styles/main.css' %}" rel="stylesheet">
 </head>
-
 <body>
   {% include 'usuarios/navbar.html' %}
-  <div class="section"></div>
-  <main>
-    <center>
-      <!-- <img class="responsive-img" style="width: 250px;" src="https://i.imgur.com/ax0NCsK.gif" /> -->
-      <!-- <h4 class="indigo-text">PlaceSoft</h4> -->
-      <div class="section"></div>
-
-      <h5 class="indigo-text">Ingresa tu Usuario y Password</h5>
-     
-      <div class="section"></div>
-
-      <div class="container">
-        <div class="z-depth-1 grey lighten-4 row" style="display: inline-block; padding: 32px 48px 0px 48px; border: 1px solid #EEE;">
-          {% if error %}
-            <p style="color: red;">{{ error }}</p>
-          {% endif %}
+  <br>
+  <br>  
+  <div class="container">  
+    
+    <!-- <div class="card mb-2 wow fadeInUp" data-wow-delay=".3s"> -->
+      <div class="card-body p-10">
           
+        {% if error %}
+        <p style="color: red;">{{ error }}</p>
+        {% endif %}
+          <div class="row">
+            <div class="col-md-8">
+              <form class="col s12" method="POST" action="{% url 'login' %}">
+                {% csrf_token %}
+                <div class="row">
+                  <div class="input-field col-md-12">
+                    <div class="md-form">
+                      <i class="material-icons prefix">account_circle</i>
+                      <input class="form-control" type='text' name='username' id='username' required="required"/>
+                      <label for="name">Tu Usuario</label>
+                    </div>
+                  </div>
+                </div>
 
-          <form class="col s12" method="POST" action="{% url 'login' %}">
-            {% csrf_token %}
-            <div class='row'>
-              <div class='col s12'>
-              </div>
-            </div>
-
-            <div class='row'>
-              <div class='input-field col s12'>
-                <input class='validate' type='text' name='username' id='username' />
-                <label for='email'>Ingresa tu Usuario</label>
-              </div>
-            </div>
-
-            <div class='row'>
-              <div class='input-field col s12'>
-                <input class='validate' type='password' name='password' id='password' />
-                <label for='password'>Ingresa tu Password</label>
-              </div>
-              <label style='float: right;'>
-								<a class='pink-text' href='#!'><b>Perdiste tu Password?</b></a>
-							</label>
-            </div>
-
-            <br />
-            <center>
-              <div class='row'>
-                <button type='submit' name='btn_login' class='col s12 btn btn-large waves-effect indigo'>Ingresa</button>
-              </div>
-            </center>
-          </form>
-        </div>
-      </div>
-      <a href="{% url 'signup' %}">Crear cuenta</a>
-    </center>
-
-    <div class="section"></div>
-    <div class="section"></div>
-  </main>
-
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.1/jquery.min.js"></script>
+                <div class="row">
+                  <div class="input-field col-md-12">
+                    <div class="md-form">
+                      <i class="material-icons prefix">lock_outline</i>
+                      <input class="form-control" type='password' name='password' id='password' required="required"/>
+                      <label for="subject">Password</label>
+                    </div>
+                  </div>
+                </div>
+                <div class="center-on-small-only mb-4">
+                  <button class="btn btn-indigo ml-0" type="submit"> Ingresa</button>
+                </div>
+              </form>
+              
+              <a href="{% url 'signup' %}">Crear cuenta</a>
+            
+          </div>
+  <!-- </div>   -->
+ 
+  <link href="{% static 'styles/main.css' %}" rel="stylesheet">
+  <script type="text/javascript" src="{% static 'js/mdb.min.js' %}"></script>
+  <!-- <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.1/jquery.min.js"></script> -->
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"></script>
+  <script type="text/javascript" src="{% static 'js/jquery-3.2.1.min.js' %}"></script>
+  <script type="text/javascript" src="{% static 'js/popper.min.js' %}"></script>
+  <script type="text/javascript" src="{% static 'js/bootstrap.min.js' %}"></script>
+  <script type="text/javascript" src="{% static 'js/mdb.min.js' %}"></script>
 </body>
-
 </html>
